--- a/index.css
+++ b/index.css
@@ -28,3 +28,12 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+#form-new-char {
+    display: none;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
