--- a/index.css
+++ b/index.css
@@ -20,10 +20,19 @@ header {
 
 #modal {
     display:none;
+    background-color: rgba(0,0,0,0.5);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#modal-box {
     background-color: red;
-    width: 500px;
-    height: 500px;
-    position: absolute;
+    width: 50vw;
+    height: 50vh;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
