--- a/index.css
+++ b/index.css
@@ -1,30 +1,127 @@
+body {
+    font-family: 'Righteous', cursive;
+    background-color: #29A2CC;
+}
+
 header {
-    padding: 50px;
+    padding: 30px 0 20px 0;
     text-align: center;
+    background-color: #99cccc;
+}
+
+h1 {
+    font-size: 70px;
 }
 
 #new {
     margin: 30px;
 }
 
+
 .character {
     list-style: none;
-    margin-left: 0;
     padding-left: 0;
+    border: 1px solid black;
+    border-radius: 12px;
+    margin: 30px 0 5px 0;
+    background-color: #99cccc;
+}
+
+#delete,
+#modify {
+    margin: 10px;
+    display: inline-flex;
+    justify-content: space-around;
+}
+
+#modify {
+    width: 40%;
+}
+
+#delete {
+    width: 40%;
 }
 
 .name {
     border: 1px solid black;
     text-align: center;
+    margin-right: 5px;
+    margin-left: 5px;
+    text-transform: capitalize;
+    background-color: #519bb3;
+
 }
 
 #modal {
-    display:none;
-    background-color: red;
+    display: none;
+    background-color: white;
     width: 500px;
-    height: 500px;
+    height: 350px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 10px solid red;
+}
+
+#modal p,
+#modal span {
+    margin: 60px;
+    line-height: 30px;
+    text-align: center;
+    font-family: 'Righteous', cursive;
+
+}
+
+p,
+span {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.idChar {
+    display: flex;
+    color: red;
+    justify-content: center;
+}
+
+#modal button {
+    display: inline;
+    margin: 30px 75px;
+}
+
+#target img {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    margin: 5px 0px 15px 25%;
+    cursor: pointer;
+}
+
+
+#single img {
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px 0px 5px 0px;
+
+}
+
+#single #details {
+    display: inline-flex;
+    flex-direction: column;
+    width: 75%;
+    margin-top: 0px;
+    height: 100px;
+
+
+}
+
+.wrapper {
+    padding: 10px;
+}
+
+#single {
+    width: 100%;
 }
