--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
+html {
+    font-size: 82.5%;
+}
+
 body {
     font-family: 'Righteous', cursive;
     background-color: #29A2CC;
+    box-sizing: border-box;
 }
 
 header {
@@ -10,14 +15,14 @@ header {
 }
 
 h1 {
-    font-size: 70px;
+    font-size: 6rem;
 }
 
 #new {
     margin: 0px;
     border: none;
     padding: 5px 15px 5px 15px;
-    font-size: 20px;
+    font-size: 1.2rem;
     border-radius: 5px;
 }
 
@@ -28,22 +33,33 @@ h1 {
 
 .character {
     list-style: none;
-    padding-left: 0;
-    border: 1px solid black;
+    padding: 10px;
+    border: 0.3rem solid rgb(28, 114, 143);
     border-radius: 12px;
     margin: 30px 0 5px 0;
     background-color: #99cccc;
 }
 
-#target #delete,
+.character .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.character .wrapper-single {
+    display: flex;
+    align-items: center;
+}
+
+/* #target #delete,
 #target #modify {
     margin: 10px;
     display: inline-flex;
     justify-content: space-around;
-}
+} */
 
 #modify {
-    width: 40%;
+    width: 45%;
     border: none;
     background-color: #FF7F50;
     color: white;
@@ -51,7 +67,7 @@ h1 {
 }
 
 #delete {
-    width: 40%;
+    width: 45%;
     border: none;
     background-color: #DC143C;
     color: white;
@@ -65,10 +81,9 @@ h1 {
 }
 
 .name {
-    border: 1px solid black;
-    text-align: center;
-    margin-right: 5px;
-    margin-left: 5px;
+    /* border: 1px solid black; */
+    padding: 5px;
+    text-align: center; 
     text-transform: capitalize;
     background-color: #519bb3;
     word-wrap: break-word;
@@ -86,7 +101,7 @@ h1 {
 
 #modal-box {
     background-color: white;
-    width: 50vw;
+    width: 80vw;
     height: 50vh;
     position: relative;
     top: 50%;
@@ -94,51 +109,48 @@ h1 {
     transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border: 10px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 #form-new-char {
     display: none;
+    padding: 2%;
 }
 
 .form-group {
     display: flex;
-    flex-direction: row;
-    margin-top: 30px;
+    flex-direction: column;
 }
 
 .form-group label {
-    width: 200px;
-    margin: 10px 0 10px 40px;
+    width: 25%;
+    margin-bottom: -2px;
 }
 
-.form-group input {
+.form-group input, .form-group textarea {
+    color: rgba(0,0,0,0.5);
     width: 500px;
 }
 
-.form-group textarea {
-    width: 500px;
-}
 
 #form-new-char p {
-
-    margin: -290px 300px 10px 855px;
     font-family: 'Righteous', cursive;
-
 }
 
 #form-new-char img {
-    widows: 200px;
+    width: 200px;
     height: 200px;
-    margin: 0px 250px 0 853px;
 }
 
 #modal p,
 #modal span {
-    margin: 60px;
-    line-height: 30px;
-    text-align: center;
+    line-height: 2rem;
     font-family: 'Righteous', cursive;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 p,
@@ -147,16 +159,15 @@ span {
 }
 
 .idChar {
-    display: flex;
     color: red;
-    justify-content: center;
 }
 
 #modal button {
-    display: inline;
-    margin: 0 0 30px 150px;
+    /*display: inline;
+     margin: 0 0 30px 150px; */
     color: white;
-    padding: 5px;
+    padding: 10px;
+    margin: 10px;
 }
 
 #modal button:hover {
@@ -174,12 +185,10 @@ span {
     border: none;
 }
 
-#target img {
+.image {
     width: 100px;
     height: 100px;
-    display: flex;
-    justify-content: center;
-    margin: 5px 0px 15px 25%;
+    padding-bottom: 5px;
     cursor: pointer;
 }
 
@@ -201,13 +210,10 @@ span {
     flex-direction: column;
     padding: 10px;
     width: 70%;
-    margin: 20px;
-    height: 100px;
-
 }
 
 #details .name {
-    width: 70%;
+    width: 100%;
 }
 
 #single .wrapper {
@@ -222,12 +228,8 @@ span {
 }
 
 #single button {
-    width: 150px;
-    padding: 10px;
-    font-size: 20px;
-    display: inline;
-    margin: 10px;
-}
+    padding: 1%;
+} 
 
 #single #delete {
     margin-right: 0px;
@@ -235,7 +237,7 @@ span {
 
 #single #modify {
     margin-left: 0px;
-}
+}*/
 
 form div {
     display: inline-flex;
@@ -251,4 +253,14 @@ form div {
 #new-char:hover {
     background-color: rgba(0, 0, 0, 0.384);
     color: white;
+}
+
+.wrapper-btn {
+    padding: 10px;
+    display:flex;
+    justify-content: space-between;
+}
+
+.wrapper-actual{
+    padding: 15px;
 }
